# docker-fastapi-ml-inference

./: .env.development  .env.production  .env.test  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
app/: env.py  main.py  models.py
app/titanic_survival/: model-20230228.joblib  model.py
kubernetes/base/: deployment.yaml  kustomization.yaml  pdb.yaml  service.yaml
kubernetes/overlays/prod/: config-map-prod.env  deployment-label-patch.yaml  kustomization.yaml  pdb-app-patch.yaml  revision-sha-ml-replacement.yaml  service-label-patch.yaml
tests/: test_env.py  test_main.py
tests/titanic_survival/: test_model.py
titanic_survival/: download_data.ipynb  train.ipynb
